[gd_scene load_steps=4 format=3 uid="uid://xwjh8c3dr4u6"]

[ext_resource type="Script" path="res://scenes/UI/menu_level.gd" id="1_dgk8k"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_o8m4x"]
bg_color = Color(0.151783, 0.148579, 0.128755, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hutng"]
bg_color = Color(0.929715, 0.929715, 0.929715, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[node name="Menu Level" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_dgk8k")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_o8m4x")

[node name="Back" type="Button" parent="."]
layout_mode = 0
offset_left = 88.0
offset_top = 51.0
offset_right = 347.0
offset_bottom = 192.0
theme_override_font_sizes/font_size = 80
text = "< Back"

[node name="HBoxContainer" type="HBoxContainer" parent="."]
custom_minimum_size = Vector2(160, 70)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -680.0
offset_top = -199.0
offset_right = 680.0
offset_bottom = 199.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 60

[node name="Level_1" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 120
theme_override_styles/normal = SubResource("StyleBoxFlat_hutng")
text = "Lv. 1"

[node name="Level_2" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 120
theme_override_styles/normal = SubResource("StyleBoxFlat_hutng")
text = "Lv. 2"

[node name="Level_3" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 120
theme_override_styles/normal = SubResource("StyleBoxFlat_hutng")
text = "Lv. 3"

[connection signal="pressed" from="Back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="HBoxContainer/Level_1" to="." method="_on_level_1_pressed"]
[connection signal="pressed" from="HBoxContainer/Level_2" to="." method="_on_level_2_pressed"]
[connection signal="pressed" from="HBoxContainer/Level_3" to="." method="_on_level_3_pressed"]
